--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 12:05:03 2018</p>
+         Last Run: Thu Nov 29 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>34</td>
+                        <td>41</td>
                         <td>77</td>
                         <td>0</td>
                         <td>10</td>
@@ -45,7 +45,7 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>18</td>
+                        <td>24</td>
                         <td>75</td>
                         <td>0</td>
                         <td>10</td>
@@ -57,11 +57,11 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>20</td>
-                        <td>74</td>
+                        <td>24</td>
+                        <td>76</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>N</td>
+                        <td>10</td>
+                        <td>NNE</td>
                         <td>97</td>
                      </tr>
                   </tbody>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "34",
-                 "18",
-                 "20"
+                 "41",
+                 "24",
+                 "24"
                ]
              },
              {
@@ -173,7 +173,7 @@
                "data":[
                  "77",
                  "75",
-                 "74"
+                 "76"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 12:05:03 2018</p>
+         Last Run: Thu Nov 29 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,10 +248,10 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-10</td>
-                        <td>43</td>
+                        <td>50</td>
                         <td>81</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>N</td>
                         <td>98</td>
                      </tr>
@@ -259,25 +259,25 @@
                         <td>01:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
-                        <td>-8</td>
-                        <td>39</td>
+                        <td>-9</td>
+                        <td>43</td>
                         <td>78</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>N</td>
-                        <td>98</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-4</td>
-                        <td>-8</td>
-                        <td>23</td>
+                        <td>-9</td>
+                        <td>33</td>
                         <td>74</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>N</td>
-                        <td>98</td>
+                        <td>97</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,8 +305,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-10",
-                 "-8",
-                 "-8"
+                 "-9",
+                 "-9"
                ]
              },
              {
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "50",
                  "43",
-                 "39",
-                 "23"
+                 "33"
                ]
              },
              {
@@ -398,8 +398,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "98",
-                 "98",
-                 "98"
+                 "97",
+                 "97"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 12:05:03 2018</p>
+         Last Run: Thu Nov 29 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -461,38 +461,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-10</td>
-                        <td>-14</td>
+                        <td>-9</td>
+                        <td>-13</td>
                         <td>7</td>
                         <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>31</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>-10</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-9</td>
                         <td>-14</td>
-                        <td>6</td>
-                        <td>83</td>
+                        <td>7</td>
+                        <td>82</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>28</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Clear</td>
-                        <td>-11</td>
-                        <td>-16</td>
-                        <td>6</td>
-                        <td>85</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-10</td>
+                        <td>-14</td>
+                        <td>7</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>27</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-13",
                  "-14",
-                 "-14",
-                 "-16"
+                 "-14"
                ]
              },
              {
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-10",
-                 "-10",
-                 "-11"
+                 "-9",
+                 "-9",
+                 "-10"
                ]
              }
            ]
@@ -591,8 +591,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "7",
-                 "6",
-                 "6"
+                 "7",
+                 "7"
                ]
              },
              {
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "82",
-                 "83",
-                 "85"
+                 "82",
+                 "84"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "31",
-                 "28",
-                 "27"
+                 "59",
+                 "63",
+                 "65"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 12:05:03 2018</p>
+         Last Run: Thu Nov 29 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -675,39 +675,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
-                        <td>-10</td>
-                        <td>-14</td>
+                        <td>Partly Cloudy</td>
+                        <td>-11</td>
+                        <td>-16</td>
                         <td>5</td>
-                        <td>72</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>W</td>
-                        <td>22</td>
+                        <td>10</td>
+                        <td>NW</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>-10</td>
-                        <td>-14</td>
+                        <td>Partly Cloudy</td>
+                        <td>-11</td>
+                        <td>-16</td>
                         <td>5</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>W</td>
-                        <td>25</td>
+                        <td>10</td>
+                        <td>NW</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Clear</td>
-                        <td>-11</td>
-                        <td>-16</td>
+                        <td>Partly Cloudy</td>
+                        <td>-12</td>
+                        <td>-17</td>
                         <td>5</td>
                         <td>73</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>26</td>
+                        <td>WNW</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-14",
-                 "-14",
-                 "-16"
+                 "-16",
+                 "-16",
+                 "-17"
                ]
              },
              {
@@ -746,9 +746,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-10",
-                 "-10",
-                 "-11"
+                 "-11",
+                 "-11",
+                 "-12"
                ]
              }
            ]
@@ -816,8 +816,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "71",
+                 "69",
+                 "70",
                  "73"
                ]
              },
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "22",
-                 "25",
-                 "26"
+                 "51",
+                 "53",
+                 "53"
                ]
              }
            ]
