--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 16:05:02 2018</p>
+         Last Run: Thu Nov 29 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>41</td>
-                        <td>76</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>97</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
+                 "77",
                  "74",
                  "75"
                ]
@@ -183,7 +183,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "98",
-                 "97",
+                 "98",
                  "97"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 16:05:02 2018</p>
+         Last Run: Thu Nov 29 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,11 +248,11 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-10</td>
-                        <td>51</td>
-                        <td>82</td>
+                        <td>58</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>NNW</td>
+                        <td>N</td>
                         <td>98</td>
                      </tr>
                      <tr>
@@ -260,7 +260,7 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>44</td>
+                        <td>52</td>
                         <td>78</td>
                         <td>0</td>
                         <td>13</td>
@@ -272,12 +272,12 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>34</td>
+                        <td>43</td>
                         <td>74</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>N</td>
-                        <td>97</td>
+                        <td>98</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "51",
-                 "44",
-                 "34"
+                 "58",
+                 "52",
+                 "43"
                ]
              },
              {
@@ -386,7 +386,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
+                 "81",
                  "78",
                  "74"
                ]
@@ -399,7 +399,7 @@
                "data":[
                  "98",
                  "98",
-                 "97"
+                 "98"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 16:05:02 2018</p>
+         Last Run: Thu Nov 29 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,27 +460,27 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-10</td>
-                        <td>-14</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-9</td>
+                        <td>-13</td>
                         <td>7</td>
                         <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>56</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-10</td>
-                        <td>-15</td>
+                        <td>-9</td>
+                        <td>-14</td>
                         <td>7</td>
-                        <td>83</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>62</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>7</td>
-                        <td>85</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>64</td>
+                        <td>61</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,8 +519,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-13",
                  "-14",
-                 "-15",
                  "-14"
                ]
              },
@@ -531,8 +531,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-10",
-                 "-10",
+                 "-9",
+                 "-9",
                  "-10"
                ]
              }
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "82",
-                 "83",
-                 "85"
+                 "82",
+                 "84"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
-                 "62",
-                 "64"
+                 "70",
+                 "65",
+                 "61"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 16:05:02 2018</p>
+         Last Run: Thu Nov 29 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -678,36 +678,36 @@
                         <td>Partly Cloudy</td>
                         <td>-11</td>
                         <td>-16</td>
-                        <td>5</td>
-                        <td>70</td>
+                        <td>4</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>50</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-12</td>
                         <td>-17</td>
-                        <td>5</td>
-                        <td>72</td>
+                        <td>4</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>53</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-13</td>
                         <td>-18</td>
-                        <td>5</td>
-                        <td>75</td>
+                        <td>4</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>53</td>
+                        <td>56</td>
                      </tr>
                   </tbody>
                </table>
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "5"
+                 "4",
+                 "4",
+                 "4"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
-                 "72",
-                 "75"
+                 "68",
+                 "69",
+                 "72"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "53",
-                 "53"
+                 "51",
+                 "55",
+                 "56"
                ]
              }
            ]
