--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 17:05:02 2018</p>
+         Last Run: Thu Nov 29 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>41</td>
-                        <td>77</td>
+                        <td>36</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>98</td>
+                        <td>99</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>98</td>
+                        <td>99</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>97</td>
+                        <td>98</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "41",
+                 "36",
                  "24",
                  "24"
                ]
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
+                 "76",
                  "74",
                  "75"
                ]
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "98",
-                 "98",
-                 "97"
+                 "99",
+                 "99",
+                 "98"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 17:05:02 2018</p>
+         Last Run: Thu Nov 29 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,11 +248,11 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-10</td>
-                        <td>58</td>
-                        <td>81</td>
+                        <td>59</td>
+                        <td>80</td>
                         <td>0</td>
-                        <td>13</td>
-                        <td>N</td>
+                        <td>14</td>
+                        <td>NNW</td>
                         <td>98</td>
                      </tr>
                      <tr>
@@ -260,8 +260,8 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>52</td>
-                        <td>78</td>
+                        <td>53</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>13</td>
                         <td>N</td>
@@ -272,7 +272,7 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>43</td>
+                        <td>46</td>
                         <td>74</td>
                         <td>0</td>
                         <td>14</td>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "58",
-                 "52",
-                 "43"
+                 "59",
+                 "53",
+                 "46"
                ]
              },
              {
@@ -386,8 +386,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "78",
+                 "80",
+                 "77",
                  "74"
                ]
              },
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 17:05:02 2018</p>
+         Last Run: Thu Nov 29 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -468,7 +468,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>70</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -476,11 +476,11 @@
                         <td>-9</td>
                         <td>-14</td>
                         <td>7</td>
-                        <td>82</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>65</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>7</td>
-                        <td>84</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>61</td>
+                        <td>63</td>
                      </tr>
                   </tbody>
                </table>
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "82",
-                 "82",
-                 "84"
+                 "81",
+                 "83"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "70",
-                 "65",
-                 "61"
+                 "71",
+                 "66",
+                 "63"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 17:05:02 2018</p>
+         Last Run: Thu Nov 29 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,7 +679,7 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>4</td>
-                        <td>68</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NW</td>
@@ -691,11 +691,11 @@
                         <td>-12</td>
                         <td>-17</td>
                         <td>4</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>55</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -703,7 +703,7 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>4</td>
-                        <td>72</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WNW</td>
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
                  "69",
-                 "72"
+                 "70",
+                 "74"
                ]
              },
              {
@@ -828,7 +828,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "51",
-                 "55",
+                 "54",
                  "56"
                ]
              }
